# EECE5554

./: .gitignore  README.md
LAB1/src/data/stationary_data2.bag/: stationary_data2.bag_0.db3
LAB1/src/gps_driver/: package.xml  setup.py
LAB1/src/gps_msg/: CMakeLists.txt  package.xml
LAB3/analysis/: data_analysis.py  lab3.m  onedrive_link.txt
LAB3/analysis/stationary_5hour_plots/: noise_params.txt
LAB3/src/data/: data_analysis.py  data_analysis2.py  stationary_mean_std.txt
LAB3/src/data/rosbag2_2024_10_14-15_00_39/: metadata.yaml
LAB3/src/data/stationary15_1/: metadata.yaml
LAB3/src/data/stationary15_2/: metadata.yaml
LAB3/src/data/stationary15_3/: metadata.yaml
LAB3/src/data/stationary15_4/: metadata.yaml
LAB3/src/imu_driver/: package.xml  setup.py
LAB3/src/imu_driver/imu_driver/: driver.py
LAB3/src/imu_driver/launch/: imu_launch.py
LAB3/src/imu_msg/: CMakeLists.txt  package.xml
LAB4/: README.md
LAB4/analysis/: data_analysis.ipynb
LAB4/data/.ipynb_checkpoints/: analysis-checkpoint.ipynb
LAB4/data/data_circle2/: data_circle2_0.db3  metadata.yaml
LAB4/data/data_drive/: metadata.yaml
LAB4/src/gps_driver/: package.xml  setup.py
LAB4/src/gps_driver/gps_driver/: driver.py
LAB4/src/imu_driver/: package.xml  setup.py
LAB4/src/sensors_launch/: package.xml  setup.cfg  setup.py
LAB5/: README.md
PA0/: assignment.txt
PA1/: .gitignore  client_srvcli.py  pub_node.py  service_srvcli.py  sub_node.py
PA1/src/py_srvcli/: setup.py
lab1_ws/src/: data_analysis.py
lab1_ws/src/gps_driver/: package.xml  setup.cfg
(+12 files in other folders)
